* SVN *

* Fix issue where Articles don't allow comments with comment_age = 0 [Rick]