@@ -25,6 +25,7 @@ class Admin::ArticlesController < Admin::BaseController
     @comments = @article.comments.collect &:to_liquid
     Mephisto::Liquid::CommentForm.article = @article
     @article  = @article.to_liquid(:single)
+    
     render :text => Template.render_liquid_for(site, site.sections.home, :single, 'articles' => [@article], 'article' => @article, 'comments' => @comments, 'site' => site.to_liquid)
   end
 
