@@ -21,8 +21,10 @@ class ApplicationController < ActionController::Base
         self.cached_references += assigns['articles']
         assigns['articles']     = assigns['articles'].collect &:to_liquid
       end
-    
-      render :text => site.templates.render_liquid_for(site, @section, template_type, assigns, self), :status => (assigns.delete(:status) || '200 OK')
+
+      status          = (assigns.delete(:status) || '200 OK')
+      @liquid_assigns = assigns
+      render :text => site.templates.render_liquid_for(site, @section, template_type, assigns, self), :status => status
     end
 
     def show_error(message = 'An error occurred.', status = '500 Error')
