@@ -1,21 +1,23 @@
 module Mephisto
   module Liquid
     class ArticleDrop < ::Liquid::Drop
-      attr_reader :article
+      include DropMethods
+      
+      def article() @source end
 
-      def initialize(article, mode)
-        @article        = article
+      def initialize(source, mode)
+        @source         = source
         @article_liquid = { 
-          'id'               => article.id,
-          'title'            => article.title,
-          'permalink'        => article.permalink,
-          'url'              => article.full_permalink,
-          'body'             => article.send(:body_for_mode, mode),
-          'published_at'     => article.site.timezone.utc_to_local(article.published_at),
-          'updated_at'       => article.site.timezone.utc_to_local(article.updated_at),
-          'comments_count'   => article.comments_count,
-          'author'           => article.user.to_liquid,
-          'accept_comments'  => article.accept_comments?
+          'id'               => @source.id,
+          'title'            => @source.title,
+          'permalink'        => @source.permalink,
+          'url'              => @source.full_permalink,
+          'body'             => @source.send(:body_for_mode, mode),
+          'published_at'     => @source.site.timezone.utc_to_local(@source.published_at),
+          'updated_at'       => @source.site.timezone.utc_to_local(@source.updated_at),
+          'comments_count'   => @source.comments_count,
+          'author'           => @source.user.to_liquid,
+          'accept_comments'  => @source.accept_comments?
         }
       end
 
@@ -24,7 +26,7 @@ module Mephisto
       end
       
       def sections
-        @sections ||= @article.sections.inject([]) { |all, s| s.home? ? all : all << s.to_liquid } # your days are numbered, home section!
+        @sections ||= @source.sections.inject([]) { |all, s| s.home? ? all : all << s.to_liquid } # your days are numbered, home section!
       end
 
       def blog_sections
