@@ -1,3 +1,12 @@
 * SVN *
 
+* Identify current section in Liquid [Rick]
+
+  {{ site.current_section }}
+  
+  {% for section in site.sections %}
+    {% if section.current %}
+    {% endif %}
+  {% endfor %}
+
 * Fix issue where Articles don't allow comments with comment_age = 0 [Rick]
